solving login bug